added Database calls to the shoppinglist fragment and shoppingitemfragment also refactored recyclerview

--- a/app/src/main/res/layout/list_shopping_item.xml
+++ b/app/src/main/res/layout/list_shopping_item.xml
@@ -11,6 +11,8 @@
             android:id="@+id/list_item_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:text="name of item"/>
 
         <TextView
@@ -21,6 +23,7 @@
 
         <TextView
             android:id="@+id/list_item_store_text_view"
+            android:textStyle="italic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name of the store"/>
