--- a/app/src/main/res/layout/fragment_shopping_item.xml
+++ b/app/src/main/res/layout/fragment_shopping_item.xml
@@ -47,6 +47,27 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"/>
 
+        <EditText
+            android:id="@+id/fragment_shopping_store_edit_text"
+            android:paddingTop="12dp"
+            android:hint="@string/enter_store"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            tools:layout_conversion_absoluteX="0dp"
+            tools:layout_conversion_absoluteY="19dp"
+            tools:layout_conversion_absoluteWidth="352dp"
+            tools:layout_conversion_absoluteHeight="45dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.017"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
+
         <CheckBox
             android:id="@+id/fragment_shopping_checkBox"
             android:layout_width="wrap_content"
@@ -62,6 +83,35 @@
             app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_edit_text"
             app:layout_constraintHorizontal_bias="0.615"
             app:layout_constraintVertical_bias="1.0"/>
+
+        <Button
+            android:id="@+id/fragment_shopping_save_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.547"/>
+
+        <Button
+            android:id="@+id/fragment_shopping_date_button"
+            android:layout_width="130dp"
+            android:layout_height="46dp"
+            android:text="@string/current_time"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_save_button"
+            app:layout_constraintHorizontal_bias="0.033"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_store_edit_text"/>
 
 
     </android.support.constraint.ConstraintLayout>
