--- a/app/src/main/res/layout/fragment_shopping_item.xml
+++ b/app/src/main/res/layout/fragment_shopping_item.xml
@@ -1,116 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         >
 
 
         <TextView
-            android:textSize="16sp"
-            android:text="@string/title"
-            android:textStyle="bold"
+            android:id="@+id/fragment_shopping_text_view"
             android:layout_width="279dp"
             android:layout_height="18dp"
-            android:id="@+id/fragment_shopping_text_view"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_edit_text"
-            app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.089"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/title"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_edit_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.089"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"/>
 
         <EditText
             android:id="@+id/fragment_shopping_edit_text"
-            android:paddingTop="12dp"
-            android:hint="@string/enter_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:layout_conversion_absoluteX="0dp"
-            tools:layout_conversion_absoluteY="19dp"
-            tools:layout_conversion_absoluteWidth="352dp"
-            tools:layout_conversion_absoluteHeight="45dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:hint="@string/enter_title"
+            android:paddingTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_conversion_absoluteHeight="45dp"
+            tools:layout_conversion_absoluteWidth="352dp"
+            tools:layout_conversion_absoluteX="0dp"
+            tools:layout_conversion_absoluteY="19dp"/>
 
         <EditText
             android:id="@+id/fragment_shopping_store_edit_text"
-            android:paddingTop="12dp"
-            android:hint="@string/enter_store"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:layout_conversion_absoluteX="0dp"
-            tools:layout_conversion_absoluteY="19dp"
-            tools:layout_conversion_absoluteWidth="352dp"
-            tools:layout_conversion_absoluteHeight="45dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.017"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_marginTop="8dp"
+            android:hint="@string/enter_store"
+            android:paddingTop="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
+            app:layout_constraintVertical_bias="0.017"
+            tools:layout_conversion_absoluteHeight="45dp"
+            tools:layout_conversion_absoluteWidth="352dp"
+            tools:layout_conversion_absoluteX="0dp"
+            tools:layout_conversion_absoluteY="19dp"/>
 
         <CheckBox
             android:id="@+id/fragment_shopping_checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CheckBox"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toEndOf="@+id/fragment_shopping_text_view"
-            android:layout_marginStart="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="CheckBox"
             app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_edit_text"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.615"
+            app:layout_constraintStart_toEndOf="@+id/fragment_shopping_text_view"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"/>
 
         <Button
             android:id="@+id/fragment_shopping_save_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/save"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
+            android:text="@string/save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
             app:layout_constraintVertical_bias="0.547"/>
 
         <Button
             android:id="@+id/fragment_shopping_date_button"
             android:layout_width="130dp"
             android:layout_height="46dp"
-            android:text="@string/current_time"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
+            android:text="@string/current_time"
             app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_save_button"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.033"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_store_edit_text"/>
 
 
