--- a/app/src/main/res/menu/menu_shopping.xml
+++ b/app/src/main/res/menu/menu_shopping.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/add_shopping_item"
         android:title="@string/add_shopping_item"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_action_add"
         app:showAsAction="always"
    />
 
