--- a/app/src/main/res/layout/list_shopping_item.xml
+++ b/app/src/main/res/layout/list_shopping_item.xml
@@ -32,6 +32,7 @@
 
         <CheckBox
             android:id="@+id/list_item_purchased_checkbox"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
