--- a/app/src/main/res/layout/fragment_shopping_item.xml
+++ b/app/src/main/res/layout/fragment_shopping_item.xml
@@ -12,39 +12,32 @@
         <TextView
             android:id="@+id/fragment_shopping_text_view"
             android:layout_width="279dp"
-            android:layout_height="18dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="23dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="@string/title"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_edit_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.089"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
+            android:layout_marginTop="16dp"/>
 
         <EditText
             android:id="@+id/fragment_shopping_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:hint="@string/enter_title"
             android:paddingTop="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="352dp"
             tools:layout_conversion_absoluteX="0dp"
-            tools:layout_conversion_absoluteY="19dp"/>
+            tools:layout_conversion_absoluteY="19dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_text_view"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
 
         <EditText
             android:id="@+id/fragment_shopping_store_edit_text"
@@ -58,30 +51,13 @@
             android:paddingTop="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_edit_text"
-            app:layout_constraintVertical_bias="0.017"
+            app:layout_constraintVertical_bias="0.0"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="352dp"
             tools:layout_conversion_absoluteX="0dp"
             tools:layout_conversion_absoluteY="19dp"/>
-
-        <CheckBox
-            android:id="@+id/fragment_shopping_checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="CheckBox"
-            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_edit_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.615"
-            app:layout_constraintStart_toEndOf="@+id/fragment_shopping_text_view"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"/>
 
         <Button
             android:id="@+id/fragment_shopping_save_button"
@@ -103,14 +79,17 @@
             android:id="@+id/fragment_shopping_date_button"
             android:layout_width="130dp"
             android:layout_height="46dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:text="@string/current_time"
-            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_save_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.033"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_store_edit_text"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_shopping_store_edit_text"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.033"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/fragment_shopping_save_button"
+            app:layout_constraintVertical_bias="0.16"/>
 
 
     </android.support.constraint.ConstraintLayout>
