--- a/app/src/main/res/layout/list_shopping_item.xml
+++ b/app/src/main/res/layout/list_shopping_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -15,28 +17,55 @@
             android:layout_height="wrap_content"
             android:text="name of item"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"/>
 
         <TextView
             android:id="@+id/list_item_date_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date"/>
+            android:text="Date"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_deleteButton"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_store_text_view"
+            android:layout_marginTop="4dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
         <TextView
             android:id="@+id/list_item_store_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name of the store"
-            android:textStyle="italic"/>
+            android:textStyle="italic"
+            app:layout_constraintTop_toBottomOf="@+id/list_item_title_text_view"
+            app:layout_constraintEnd_toStartOf="@+id/list_item_deleteButton"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
-        <CheckBox
-            android:id="@+id/list_item_purchased_checkbox"
-            android:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+        <ImageButton
+            android:id="@+id/list_item_deleteButton"
+            android:layout_width="45dp"
+            android:layout_height="35dp"
+            android:background="@android:color/transparent"
+            app:srcCompat="@drawable/ic_action_trash"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </layout>
 
